testing/tests/expect-compile-error/rc-is-not-send.stderr
error: future cannot be sent between threads safely
 --> tests/expect-compile-error/rc-is-not-send.rs:6:16
  |
6 |   #[named_future(Send)]
  |  ________________^
7 | | async fn async_drop(counter: Rc<()>) {
  | |___________________^ future returned by `async_drop` is not `Send`
  |
  = help: within `impl Future<Output = ()>`, the trait `Send` is not implemented for `Rc<()>`
note: future is not `Send` as this value is used across an await
 --> tests/expect-compile-error/rc-is-not-send.rs:7:10
  |
7 | async fn async_drop(counter: Rc<()>) {
  |          ^^^^^^^^^- ------- has type `Rc<()>` which is not `Send`
  |          |        |
  |          |        `counter` is later dropped here
  |          await occurs here, with `counter` maybe used later
note: required by a bound in `ensure_send`
 --> $WORKSPACE/src/machinery.rs
  |
  |     Fut: marker::Send,
  |          ^^^^^^^^^^^^ required by this bound in `ensure_send`
